--- a/infra-tools-stage/app-of-apps/external-secrets-app.yaml
+++ b/infra-tools-stage/app-of-apps/external-secrets-app.yaml
@@ -31,7 +31,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "https://vault.mirafzal.uz"
+      server: "https://vault.staging.mirafzal.uz"
       path: "kv"
       version: "v2"
       auth:
