--- a/infra-tools-stage/app-of-apps/argocd-app.yaml
+++ b/infra-tools-stage/app-of-apps/argocd-app.yaml
@@ -100,14 +100,13 @@ spec:
           certificate:
             enabled: true
             domain: "argocd.staging.mirafzal.uz"
-#            issuer:
-#              # -- Certificate issuer group. Set if using an external issuer. Eg. `cert-manager.io`
-#              group: ""
-#              # -- Certificate issuer kind. Either `Issuer` or `ClusterIssuer`
-#              kind: ""
-#              # -- Certificate issuer name. Eg. `letsencrypt`
-#              name: ""
-#            # Private key of the certificate
+            issuer:
+              # -- Certificate issuer group. Set if using an external issuer. Eg. `cert-manager.io`
+              group: "cert-manager.io"
+              # -- Certificate issuer kind. Either `Issuer` or `ClusterIssuer`
+              kind: "ClusterIssuer"
+              # -- Certificate issuer name. Eg. `letsencrypt`
+              name: "letsencrypt-prod"
 
   destination:
     server: "https://kubernetes.default.svc"
