--- a/infra-tools-stage/app-of-apps/argocd-app.yaml
+++ b/infra-tools-stage/app-of-apps/argocd-app.yaml
@@ -96,17 +96,18 @@ spec:
             annotations:
               nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
               nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+              cert-manager.io/cluster-issuer: letsencrypt-prod
             tls: true
-          certificate:
-            enabled: true
-            domain: "argocd.staging.mirafzal.uz"
-            issuer:
-              # -- Certificate issuer group. Set if using an external issuer. Eg. `cert-manager.io`
-              group: "cert-manager.io"
-              # -- Certificate issuer kind. Either `Issuer` or `ClusterIssuer`
-              kind: "ClusterIssuer"
-              # -- Certificate issuer name. Eg. `letsencrypt`
-              name: "letsencrypt-prod"
+#          certificate:
+#            enabled: true
+#            domain: "argocd.staging.mirafzal.uz"
+#            issuer:
+#              # -- Certificate issuer group. Set if using an external issuer. Eg. `cert-manager.io`
+#              group: "cert-manager.io"
+#              # -- Certificate issuer kind. Either `Issuer` or `ClusterIssuer`
+#              kind: "ClusterIssuer"
+#              # -- Certificate issuer name. Eg. `letsencrypt`
+#              name: "letsencrypt-prod"
 
   destination:
     server: "https://kubernetes.default.svc"
