--- a/infra-tools-stage/app-of-apps/external-secrets-app.yaml
+++ b/infra-tools-stage/app-of-apps/external-secrets-app.yaml
@@ -23,22 +23,22 @@ kind: Namespace
 metadata:
   name: external-secrets
 
----
-apiVersion: external-secrets.io/v1beta1
-kind: ClusterSecretStore
-metadata:
-  name: vault-backend
-spec:
-  provider:
-    vault:
-      server: "https://vault.staging.mirafzal.uz"
-      path: "kv"
-      version: "v2"
-      auth:
-        tokenSecretRef:
-          name: "vault-token"
-          key: "token"
-          namespace: external-secrets
+#---
+#apiVersion: external-secrets.io/v1beta1
+#kind: ClusterSecretStore
+#metadata:
+#  name: vault-backend
+#spec:
+#  provider:
+#    vault:
+#      server: "https://vault.staging.mirafzal.uz"
+#      path: "kv"
+#      version: "v2"
+#      auth:
+#        tokenSecretRef:
+#          name: "vault-token"
+#          key: "token"
+#          namespace: external-secrets
 
 #---
 #apiVersion: v1
