--- a/business-apps/app-of-apps/django-app.yaml
+++ b/business-apps/app-of-apps/django-app.yaml
@@ -15,7 +15,7 @@ spec:
     helm:
       valueFiles:
         - values.yaml
-  project:
+  project: development-apps
   syncPolicy:
     automated:
       prune: false
